--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,27 @@
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap'); 
 .App {
   text-align: center;
 }
 
 body{
   background-color: blanchedalmond;
+  font-family: 'Poppins', sans-serif;
 }
 
+h3{
+  padding-left:20px;
+}
+section{
+  text-align:left;
+  border:black solid 8px;
+  border-radius: 16px;
+  width: 95%;
+  margin: auto;
+  margin-bottom: 32px;
+}
+section>p{
+  padding-left: 24px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
